// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericCallParamsMatcher Should match snapshot for all component types 1`] = `
.c1 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  height: 1.6rem;
  width: 1.6rem;
}

.c3 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c5 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c4 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.c4:hover {
  cursor: pointer;
  color: #fff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-right: 0.5rem;
  overflow-wrap: break-word;
}

<div>
   
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <img
        alt="Avatar"
        class="c2 c3"
        data-testid="avatar"
        size="16"
        src="test"
      />
    </span>
    <a
      class="c4"
      rel="noopener"
      target="_blank"
    >
      <div
        class="c5 c6"
      >
        0x3f94...4351
      </div>
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
        />
        <polyline
          points="15 3 21 3 21 9"
        />
        <line
          x1="10"
          x2="21"
          y1="14"
          y2="3"
        />
      </svg>
    </a>
  </div>
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 2`] = `
<div>
   
  1000000000000000000
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 3`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 4`] = `
<div>
   
  Sunday, May 29, 2022 6:17 PM UTC
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 5`] = `
<div>
   
  52 years
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 6`] = `
<div>
   
  false
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 7`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 8`] = `
<div>
   
  QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 9`] = `
<div>
   
  Test String
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 1`] = `
.c1 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  height: 1.6rem;
  width: 1.6rem;
}

.c3 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c5 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c4 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.c4:hover {
  cursor: pointer;
  color: #fff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-right: 0.5rem;
  overflow-wrap: break-word;
}

<div>
   
  <span
    matchedparam="addressParam"
    style="display: inline-block;"
  >
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <img
          alt="Avatar"
          class="c2 c3"
          data-testid="avatar"
          size="16"
          src="test"
        />
      </span>
      <a
        class="c4"
        rel="noopener"
        target="_blank"
      >
        <div
          class="c5 c6"
        >
          0x3f94...4351
        </div>
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </div>
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 2`] = `
<div>
   
  <span
    matchedparam="integerParam"
    style="display: inline-block;"
  >
    1000000000000000000
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 3`] = `
<div>
   
  <span
    matchedparam="decimalParam"
    style="display: inline-block;"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 4`] = `
<div>
   
  <span
    matchedparam="dateParam"
    style="display: inline-block;"
  >
    Sunday, May 29, 2022 6:17 PM UTC
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 5`] = `
<div>
   
  <span
    matchedparam="timeParam"
    style="display: inline-block;"
  >
    52 years
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 6`] = `
<div>
   
  <span
    matchedparam="booleanParam"
    style="display: inline-block;"
  >
    false
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 7`] = `
<div>
   
  <span
    matchedparam="tokenAmountParam"
    style="display: inline-block;"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 8`] = `
<div>
   
  <span
    matchedparam="contentHashParam"
    style="display: inline-block;"
  >
    QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 9`] = `
<div>
   
  <span
    matchedparam="otherParam"
    style="display: inline-block;"
  >
    Test String
  </span>
   
</div>
`;
